# reverse_pred

./: LICENSE  README.md  between_instances_prediction_v2.py  decode_utils.py  demo_forward_predictivity.ipynb  demo_generate_model_i1.ipynb  demo_generate_neurons_i1.ipynb  demo_reverse_predictivity.ipynb  figure1.ipynb  figure2.ipynb  figure3.ipynb  figure4.ipynb  figure5.ipynb  figure6.ipynb  figure_utils.py  get_features.ipynb  model_to_model.py  model_to_model_multi_ouput.py  model_to_monkey.py  model_to_monkey_multi_ouput.py  monkey_to_model.py  monkey_to_model_multi_ouput.py  monkey_to_model_unique_multi_ouput.py  monkey_to_monkey.py  multi_output_prediction_utils.py  one_to_one_monkey.py  plot_behavior_corrected_for_accuracy.ipynb  plot_reverse_predictivity_v2.ipynb  plot_sampling_results.ipynb  plots_behavior_v2.ipynb  prediction_utils.py  regression_metrics.py  stats.py  within_model_prediction_v2.py
lib/: README.md  pyproject.toml
lib/src/reverse_pred/: correlation_metrics.py  decode_utils.py  h5_utils.py  model_to_model.py  model_to_monkey.py  monkey_to_model.py  monkey_to_monkey.py  prediction_utils.py  regression_metrics.py
