[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "reverse_pred"
version = "0.1.5"
authors = [
  { name="Sabine Muzellec and Kohitij Kar", email="sabinem@yorku.ca" },
]
description = "Library to run Reverse Predictivity"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/vital-kolab/reverse_pred"
Issues = "https://github.com/vital-kolab/reverse_pred/issues"